adjusting links and CSS

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ layout: default
         <div class="row">
          
           <div id="playnow" class="col-xs-12 col-sm-4 channel">
-            <a href="play.conemifyoucan.org"></a>
+            <a href="http://play.conemifyoucan.org"></a>
             play now
           </div>
           <div id="googleplay" class="col-xs-12 col-sm-4 channel">
