--- a/quiz.html
+++ b/quiz.html
@@ -7,13 +7,13 @@ permalink: /quiz/
 			<div class="container">
 				<div class="row realtive">
 					<div class="col-md-12 ">
-						<img src="/images/quiz_ribbon.png" class="center-block">
+						<img src="{{site.url}}/images/quiz_ribbon.png" class="center-block">
 						<h2 class="text-center ribbon_text">Quiz</h2>
 					</div>
 
 					<div class="col-md-12 ">
 						
-						<img src="/images/quiz_img.png" class="quiz_image center-block">
+						<img src="{{site.url}}/images/quiz_img.png" class="quiz_image center-block">
 					</div>
 					<div class="col-md-12 padding80 intro_innerpage">
 						<p>Identify the right persuasion tactic and you’ll have the knowledge to con Catsby, the “Big Fish” in Con ’Em If You Can—and to spot and avoid investment fraud in the real world.</p>
