adding reap to quiz

--- a/quiz.html
+++ b/quiz.html
@@ -29,12 +29,12 @@ permalink: /quiz/
 		<form id="quiz-form"  class="blue">
 			<div class="container quiz_card" id="question1">
 				<div class="row">
-					<div class="col-md-1">
+					<div class="col-sm-2 col-md-1">
 						<div class="orange_border num">
 							1.
 						</div>
 					</div>
-					<div class="col-md-11">
+					<div class="col-sm-10 col-md-11">
 						<p class="question"><span>“</span>Because you’re such a good friend, I’m going to give a break on commission for this red hot deal. Come by for lunch (on me) and I can walk you through the details.”  </p>
 						<div class="answer">
 							<span class="radiogroup">
