adding more responsive

--- a/quiz.html
+++ b/quiz.html
@@ -27,6 +27,7 @@ permalink: /quiz/
 		
 		
 		<form id="quiz-form"  class="blue">
+			<div class="container padding80 margin_b15"><p id="results_cont"></p></div>
 			<div class="container quiz_card" id="question1">
 				<div class="row">
 					<div class="col-sm-2 col-md-1">
@@ -221,8 +222,13 @@ permalink: /quiz/
 						  	
 					</div>
 				</div>
-			</div>	
-			<a id="quiz_submit" class="orange_border center-block margin_t30 text-center">Submit QUIZ!</a>		
+			</div>
+			<div class="container">
+				<div class="row">	
+					<a id="quiz_submit" class=" col-md-offset-5 orange_border margin_t30 text-center col-md-3">Submit QUIZ!</a>
+					<a id="quiz_restart" href="../quiz/" class=" orange_border margin_t30 text-center col-md-offset-5 col-md-3">Restart</a>
+				</div>
+			</div>		
 		</form>
 
 		
