--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
+published: true
 ---
+
   
   
     <header id="illustration">
@@ -14,7 +16,7 @@ layout: default
         <div class="row intro">
          
           <div class="col-sm-12 padding80">
-            <h2>CON ’EM IS A STRATEGY GAME WHERE YOU PLAY THE CON </h2>
+            <h2>test ’EM IS A STRATEGY GAME WHERE YOU PLAY THE CON </h2>
             <p>Learn first-hand about the types of persuasion tactics used to perpetrate financial fraud, so that you’ll be better able to defend against them. Con your way through the town of Shady Acres, accumulating wealth and strength by using these tactics as fraud tools to exploit the vulnerabilities of unsuspecting targets. But watch out—the Fraud Fighting Agency’s lead agent, Fiona, is hot on your trail. Can you pull off the ultimate con before she finds you?</p>
 
           </div>
@@ -137,6 +139,3 @@ layout: default
           </div>
         </div>
     </section>
- 
-  
-
